added software requirements

--- a/ToDo.txt
+++ b/ToDo.txt
@@ -10,6 +10,7 @@
 - изучить принципы работы с аналоговым датчиком тока
 - рассмотреть варианты датчиков проводимости и ионоселективных химических
 - рассмотреть варинаты управления резервным питанием и зарядом акб с микроконтроллера, возможно это будет отдельный самостоятельный модуль
+- рассмотреть варианты для дальнейшего обновления прошивки удобным способом
 
 2. разработка прототипов составных частей
 - спроектировать основной аквариум-дисплей по выбранной схеме перелива/слива, нарисовать чертеж
@@ -24,7 +25,7 @@
 - выбрать запасную батарею, блок питания
 - выбрать систему фильтрации помех по 220в и защиты от возможной утечки тока на воду, интегрировать в нее датчик тока
 - проверить что ничего не забыто по проекту перед выполнением следующего пункта
-- разработать(easypda) схему соединения электронных компонентов
+- разработать(easypda) схему соединения электронных компонентов с микроконтроллером
 - составить список недостающих материалов и компонентов
 - закупить компоненты, вести учет материальных затрат
 
@@ -37,8 +38,15 @@
 - собрать и установить основной светильник, светильник в тумбу
 - собрать прототип электронной части, подключить устройства
 
-4. разработать программную часть
-
+4. разработать программную часть, требования к ней:
+- взаимодействовать с пльзователем напрямую с помощью механического экодера с кнопкой
+- выводить информацию на дисплей
+- взаимодействовать с пользователем напрямую с помощью кнопок быстрого включением/выкл исполнительных устройств
+- отображать состояние исполнительных устройств светодиодными индикаторами
+- выполнять задачи по расписанию реального времени
+- использовать eprom для хранения настроек
+- вести учет изменений/колебаний параметров системы за прошедший период времени
+- взаимодействовать с пк для передачи телеметрии и принятия новых настроек
 
 
 100. проектирование и сборка блока управления для законченного пользовательского устройства
