added testing stage

--- a/ToDo.txt
+++ b/ToDo.txt
@@ -34,19 +34,35 @@
 - заказать дверцы и фурнитуру для тумбы
 - выполнить в тумбе разводку розеток 220в
 - заказать у специалистов стеклянные части для дисплея и сампа
-- собрать водопроводную часть: перелив, трубы, помпы, нагреватели, датчик потока, температуры и пр.
-- собрать и установить основной светильник, светильник в тумбу
+- собрать водопроводную и механическую части: перелив, трубы, помпы, нагреватели, датчики потока/температуры/уровней/освещенности и пр.
+- собрать и установить основной светильник, установить светильник в тумбу
 - собрать прототип электронной части, подключить устройства
 
 4. разработать программную часть, требования к ней:
 - взаимодействовать с пльзователем напрямую с помощью механического экодера с кнопкой
-- выводить информацию на дисплей
 - взаимодействовать с пользователем напрямую с помощью кнопок быстрого включением/выкл исполнительных устройств
+- выводить информацию на дисплей
 - отображать состояние исполнительных устройств светодиодными индикаторами
-- выполнять задачи по расписанию реального времени
+- выполнять задачи по расписанию реального времени для управления освещением
+- выполнять задачи по расписанию реального времени для управления баллингом
+- выполнять задачи по расписанию реального времени для управления течением и кормушкой
+- управлять клапаном долива осмос-воды в самп, опираясь на показания датчиков уровней
 - использовать eprom для хранения настроек
-- вести учет изменений/колебаний параметров системы за прошедший период времени
+- вести учет изменений/колебаний параметров системы(температуры, влажности, других событий) за прошедший период времени
+- иметь сигнализацию аварийных или критических состояний, контролировать датчик перелива в дисплее, датчик потока на помпе
+- уметь распознавать переход на резервное питание и соответственно реагировать - отключать все лишнее, включать компрессор
 - взаимодействовать с пк для передачи телеметрии и принятия новых настроек
+
+5. тестирование прототипа, исправление конструкции на месте по мере возможности, документирование изменений
+- выявление механических проблем и недочетов, исправление чертежей
+- выявление аппаратных проблем электронной части, исправление списка используемых компонентов
+- выявление программных проблем электронной части, ведение версий прошивок(github) с детальным описанием изменений
+- настройка температурного режима
+- настройка светового дня
+- настройка управления течением и кормушкой
+- настройка системы баллинга, контроль хим.показателей
+
+6. тестирование с живыми обитателями
 
 
 100. проектирование и сборка блока управления для законченного пользовательского устройства
