--- a/ToDo.txt
+++ b/ToDo.txt
@@ -12,7 +12,7 @@
 - рассмотреть варинаты управления резервным питанием и зарядом акб с микроконтроллера, возможно это будет отдельный самостоятельный модуль
 - рассмотреть варианты для дальнейшего обновления прошивки удобным способом
 
-2. разработка прототипов составных частей
+2. разработка составных частей прототипа
 - спроектировать основной аквариум-дисплей по выбранной схеме перелива/слива, нарисовать чертеж
 - спроектировать технический аквариум-самп по выбранному функционалу, нарисовать чертеж
 - спроектировать тумбу, с учетом расположения всех систем, нарисовать чертеж
@@ -29,7 +29,7 @@
 - составить список недостающих материалов и компонентов
 - закупить компоненты, вести учет материальных затрат
 
-3. сборка прототипов составных частей
+3. сборка составных частей прототипа
 - построить тумбу по чертежу
 - заказать дверцы и фурнитуру для тумбы
 - выполнить в тумбе разводку розеток 220в
