--- a/ToDo.txt
+++ b/ToDo.txt
@@ -45,7 +45,7 @@
 - отображать состояние исполнительных устройств светодиодными индикаторами
 - выполнять задачи по расписанию реального времени для управления освещением
 - выполнять задачи по расписанию реального времени для управления баллингом
-- выполнять задачи по расписанию реального времени для управления течением и кормушкой
+- выполнять задачи по расписанию реального времени для управления течением и кормушкой(предусмотреть перекорм)
 - управлять клапаном долива осмос-воды в самп, опираясь на показания датчиков уровней
 - использовать eprom для хранения настроек
 - вести учет изменений/колебаний параметров системы(температуры, влажности, других событий) за прошедший период времени
